--- a/vacations/vacations/mainGUI.resx
+++ b/vacations/vacations/mainGUI.resx
@@ -169,49 +169,72 @@
         7NOmt6ALG72YoXcbdG9nZFsQ6PjuWIYD1eDyJ3mShxeR6D+2gAS5+aarPwAAAABJRU5ErkJggg==
 </value>
   </data>
-  <data name="toolStripButton3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="toolStripButton6.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAIDSURBVDhPpZLrS5NhGMb3j4SWh0oRQVExD4gonkDpg4hG
-        YKxG6WBogkMZKgPNCEVJFBGdGETEvgwyO9DJE5syZw3PIlPEE9pgBCLZ5XvdMB8Ew8gXbl54nuf63dd9
-        0OGSnwCahxbPRNPAPMw9Xpg6ZmF46kZZ0xSKzJPIrhpDWsVnpBhGkKx3nAX8Pv7z1zg8OoY/cITdn4fw
-        bf/C0kYAN3Ma/w3gWfZL5kzTKBxjWyK2DftwI9tyMYCZKXbNHaD91bLYJrDXsYbrWfUKwJrPE9M2M1Oc
-        VzOOpHI7Jr376Hi9ogHqFIANO0/MmmmbmSmm9a8ze+I4MrNWAdjtoJgWcx+PSzg166yZZ8xM8XvXDix9
-        c4jIqFYAjoriBV9AhEPv1mH/sonogha0afbZMMZz+yreTGyhpusHwtNNCsA5U1zS4BLxzJIfg299qO32
-        Ir7UJtZfftyATqeT+8o2D8JSjQrAJblrncYL7ZJ2+bfaFnC/1S1NjL3diRat7qrO7wLRP3HjWsojBeCo
-        mDEo5mNjuweFGvjWg2EBhCbpkW78htSHHwRyNdmgAFzPEee2iFkzayy2OLXzT4gr6UdUnlXrullsxxQ+
-        kx0g8BTA3aZlButjSTyjODq/WcQcW/B/Je4OQhLvKQDnzN1mp0nnkvAhR8VuMzNrpm1mpjgkoVwB/v8D
-        TgDQASA1MVpwzwAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAWESURBVGhD7ZltTFtVGMcxGk30gya+xS9mUIcvX8xiFjP3
+        QeeSIcIWjaMlyzRxmrAPxo/bF800xhGzaOamgU1tC0xuaYHxMlocgzLeClhaIF17e1vcm7r4yTnn1G3c
+        x+c597Rrb0/fIrQs4Z/808s9z3nO7znnntvTULKqVa1q6QTVj92rmkp3qMbSDtVYFkJfBVMZ3LLhJR66
+        8qTWrDEi+MVk4GRju5uHryypprL9ImCRcVXCuEqfqbWlj/LuxRUCfSACzWYs4gquyBs8TXGkbjdsQJAb
+        IsBcjCt3UzWuqeDpCi+EGNZD5WtchQtQ88zdPGXhBDWG50RAQtc9DVD/PIC0RfvUtasmg4mnLZxw5j7W
+        gyQ5Edq1NdkHNujiS608beGEA6c+Ppmg9U5aiVIvT1s4sWc3X2i9+Urgi+A8T1s44RvkGitABJaPWQFl
+        13jawklb+qUpgMzTFk63dQFq69oq9T3D30tVAOVSpfJKnn75hYNdhNZygI/WJ8E0vL0WGtGJ9xItbKcc
+        mEttLb/A0y+/WAESFpAIgia4xl3pC0jbjrkKXUAlFaH2VakpMHladVYtEjz6FZ6+cFKd1bIIKh9TDp6u
+        8FJd1d+KoPIx5jjK0xVeOHtbRFD5mHLwdMWR6tzqFoHlYuw7wtMUT9Bf/RQ+Br+LADOZ+qiubU/yNMWV
+        2r9tEzirL4tARWbw2Id3T9E+t/suiy38hcWmfE7X/PbyilYCujYKgZN8fCMWkH7mm+wLj1skZRThgWyW
+        lCmrpBh48/IKGksArA8DOJ4F6NkE4HxVM13TPWrDGB6eJMvxsw+Ybco+hP+TwFs6ZWZWCN2TlA+P2Bfu
+        5+HLI1ZADqbY5ubZ+75pizyBj0otglvQV2Oz3jkUgLHz0zCO7hgMaEWgKYbFSrKJ+lIONvBSSQQrMsUi
+        0PUYGNnapoDj5BlwyzMw+etUkt2yF+wngywmsQ+uyg028P/RrKKs88vRQ+jIfMD318L4UbjU/z784XgZ
+        rpsfYaZrukdtFEOxVpvyL0HYEbpveg5GF35MAdd75Ccvi6U+vIArHCN/+eSF9b5QZARhIJ3rv56CTw5O
+        CtuOdWizeDoHcL2pD/U1S+H8f4oqinKPX440IPyiCCxmgn/x9T5mURGO3giDGAykPjJ6D54bgkNTh+N/
+        nwr4tBWwKfl9EXpl+SEcfFgPI/KBI7cKqP8qtYDuH7QCnN7ZJFi9CX5H+1uw2VoBX/IiXNiHrQBuaI6W
+        XVPB4IP+UCSkB0lnz6wSL4Cu9e0DY1EG0TkciMPSLBOwCJ4+Y22dbv5malN2c7zMAoA7EN6ph8hk10gw
+        XoDrdDClfcKvFfB9t8ygaHYTQdPBk491ad8PTa3KOo6YWX5Z2akHyGapZy5egNQ7l9LuQ7e0840c8aYA
+        p4MfxljqY7aFf8vpmGEHuNMfikb1ANnc0DITL4CuRTG9p7QCeibmGdwQFdHxJgMnmxw7YeDsYByeTLHU
+        B32YI2bWjBzdLBo8mxPfQnQtihmd0TZyMx4ZPD9PJxUhgqeY2PHCLEVe4IiZha/Mg6LBs3nvp2PxAvbu
+        HxPGkG1d2irQmyUGGtsDifBkemOx2ZeUedqXHDGzcJAJ/aC5uG6PO15A3Z5hYQx5yMNXoT0M4+fSf6nR
+        2ailI8xirW0RI8fLLlyBS6KBs9lYNxAvwLR7QBgTs+OEtgp0cBPBk+OHOjxq5zz7JF8o+o9o0GyuqHXF
+        C6BrUUzMk3MRaLZrRfR6tA2d6N7YxsWzT5MULOdoK0vftSrb8Wi9SKAnPHPg+QU3LZoKont47rmJn8X9
+        p2A2mW3yu7Ei2gfOMLOZp3uS8g4PW9mySnKlRQpf1sC1x8Zik1/jzbeH6HcxftN248x30TW/LVBJyX+q
+        t/nyJ6Z23QAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="toolStripButton4.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAIDSURBVDhPpZLrS5NhGMb3j4SWh0oRQVExD4gonkDpg4hG
-        YKxG6WBogkMZKgPNCEVJFBGdGETEvgwyO9DJE5syZw3PIlPEE9pgBCLZ5XvdMB8Ew8gXbl54nuf63dd9
-        0OGSnwCahxbPRNPAPMw9Xpg6ZmF46kZZ0xSKzJPIrhpDWsVnpBhGkKx3nAX8Pv7z1zg8OoY/cITdn4fw
-        bf/C0kYAN3Ma/w3gWfZL5kzTKBxjWyK2DftwI9tyMYCZKXbNHaD91bLYJrDXsYbrWfUKwJrPE9M2M1Oc
-        VzOOpHI7Jr376Hi9ogHqFIANO0/MmmmbmSmm9a8ze+I4MrNWAdjtoJgWcx+PSzg166yZZ8xM8XvXDix9
-        c4jIqFYAjoriBV9AhEPv1mH/sonogha0afbZMMZz+yreTGyhpusHwtNNCsA5U1zS4BLxzJIfg299qO32
-        Ir7UJtZfftyATqeT+8o2D8JSjQrAJblrncYL7ZJ2+bfaFnC/1S1NjL3diRat7qrO7wLRP3HjWsojBeCo
-        mDEo5mNjuweFGvjWg2EBhCbpkW78htSHHwRyNdmgAFzPEee2iFkzayy2OLXzT4gr6UdUnlXrullsxxQ+
-        kx0g8BTA3aZlButjSTyjODq/WcQcW/B/Je4OQhLvKQDnzN1mp0nnkvAhR8VuMzNrpm1mpjgkoVwB/v8D
-        TgDQASA1MVpwzwAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAPMSURBVGhD7ZhdSFNhGMetoKDLPgi6V7uTEV2UN04jtU2p
+        tqWZNwZ5k2dUBrolLDNC60a9aBIhkjIvSovC6Z0iEiSmQqBFQX4gWoTfmpA7b8+zPUfOXt+5D93Zgv3h
+        x47nfd7/83/OOTsMkxJKKKG9k9FoPKzX64syMzM7gHE4XoVPppCVlZVBpfEnCHsVQk6rA/NATS+Vx5cg
+        3GM+bCBgiK9AHRyfoO2xFYSp4kOGyHJGRoaJbGIjeKbPQpC/XLCQgeE3YYhsstNeEKKPDxUuMMSUxWI5
+        SJbaCRqfFgUSUWI5z1qqstmPVoP3k1+HO1lAttoJBqjmg6hRQk+0GRjrzvOjvTrHrxa8WshWO0HjbY+P
+        +krzoXm4OzFEttoJn111aNGVDoZyJ8Brkmy1EzRex+aiYOGAHuhFttqJGgtDhYPiQ7ba6b8eQHYlG8qL
+        z/3ZqwHQS25PySX76AuaTXtcqazxXrZfGGdJMmsC1OfUiNbRA71kV8oU2UdfOABrT/ELgmC4phuBBwi4
+        Dl5aD5CLQ8hdBnlbmDCR3QYPhgdyyF47yW7jF1GocEAPstNecrfxhShUOIDHc7LTXnD1LohChQN6kF1s
+        JLvzekXBQgH29pNN7MR6jKfgMVgQBdwJ3CN356eSTWwl9+Trmdu4KAoqwhse9tD2+BDeCfY2XRjYjzfp
+        MECcXHlerCmJsZbjjL1KY+ydnjH3RR94jOdwDWqoPP7kHSAEqDz+JAorgsrjQyapQmey2htNkv3b2LB7
+        hk28Z2zoge95f3nSBx7jOVgbG3LPYK1vT4WObLTXZWvlGbPV3g8whfK6hgGm0k+nk83V19NfPpXXNgyo
+        9wD96EW20VeOJB0ySzanSbJ5uCAMruz64srqbwyK4T+npXlRhlhaWZnHmu37wAs80ZvaREfX7jqOwa3v
+        4wOocbo6+jDsr+bmrQFwGNQz1+sd98JwHwqttuj8z/TSrcqj0GScb8pTcLtq0uPxbG4uLGwNgMdwzoNr
+        oj0c4+Y7jiPUds+0z2y1uQXNhPR+/DS4Njy8NcDayIj3nKhWiGTvwp6+1nsgk9VWLGwUgNKq2sH5jo6t
+        AeY7O73nRLUBke5fp/a7k8ViOQADfBc2CQB+KUcf1iwqA4zWPFoSfel3Al+1DodjP8WIXBA+S9QgGE9K
+        y+aUAZ6WSrOimmBckWy7/8EHV6JeZB6MAsm2PKLTMQSPRTXBwN4UI3Lhq01kHgpt5qL1VlPhtvd+GAxQ
+        jMgF7/2Ibj9ys6xiFhGthQL2phiRC4w2eGMN2aAYCSWUkFBJSf8ANdq9i+nTmY0AAAAASUVORK5CYII=
 </value>
   </data>
-  <data name="toolStripButton5.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="toolStripButton3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAIDSURBVDhPpZLrS5NhGMb3j4SWh0oRQVExD4gonkDpg4hG
-        YKxG6WBogkMZKgPNCEVJFBGdGETEvgwyO9DJE5syZw3PIlPEE9pgBCLZ5XvdMB8Ew8gXbl54nuf63dd9
-        0OGSnwCahxbPRNPAPMw9Xpg6ZmF46kZZ0xSKzJPIrhpDWsVnpBhGkKx3nAX8Pv7z1zg8OoY/cITdn4fw
-        bf/C0kYAN3Ma/w3gWfZL5kzTKBxjWyK2DftwI9tyMYCZKXbNHaD91bLYJrDXsYbrWfUKwJrPE9M2M1Oc
-        VzOOpHI7Jr376Hi9ogHqFIANO0/MmmmbmSmm9a8ze+I4MrNWAdjtoJgWcx+PSzg166yZZ8xM8XvXDix9
-        c4jIqFYAjoriBV9AhEPv1mH/sonogha0afbZMMZz+yreTGyhpusHwtNNCsA5U1zS4BLxzJIfg299qO32
-        Ir7UJtZfftyATqeT+8o2D8JSjQrAJblrncYL7ZJ2+bfaFnC/1S1NjL3diRat7qrO7wLRP3HjWsojBeCo
-        mDEo5mNjuweFGvjWg2EBhCbpkW78htSHHwRyNdmgAFzPEee2iFkzayy2OLXzT4gr6UdUnlXrullsxxQ+
-        kx0g8BTA3aZlButjSTyjODq/WcQcW/B/Je4OQhLvKQDnzN1mp0nnkvAhR8VuMzNrpm1mpjgkoVwB/v8D
-        TgDQASA1MVpwzwAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAIwSURBVGhD7ZSxThRRGIVvYiP2PAW7RjsKTChYOiuz8QnU
+        lgU60FgLHWzrA1Co8XHMaqwk8QFsjLnMYY4F/5yGM8PPJnCSL7s7M/f83+ze2XKf+9xw6s+v9Tahhh9V
+        mgk1/KjSTKjhR5VmQg0/qjQTavhRpZlQw48qzYQaflTp3+NyY8RZ1PATC4EaPBRxFjX8xEKgBg9FnEUN
+        P7EQqMFDEWdRw08szIYaflRpJtTwo0ozoYYfVZoJNfyoUvXwDUWcRQ0/sRCowUMRZ1HDTyzMhhp+VGkm
+        1PCjStVPPxRxFjX8xEKgBg9FnEUNP7EwG2r4UaWZUMOPKlU//XVRvQpq+FGlSui6qF4FNfyo0kyo4UeV
+        ZkINP6o0E2r4UaWZUMOPKs2EGn5UaS8+HdT6alTr1sOW1+Pm2KG+toEaflSpzYcXtT5r/kIVR1O5hhp+
+        VKkFvnmIbj6odTapdb5X62nDzlZ7DOc+v+2so4afWGiDbQNJCH98fxUcwzlsp7COGn5ioc2k2e+QxDcf
+        b2C+356brHTWUcNPLLT5fwPYNvEGTnbbc9uPOuuo4ScW2mB7QFJtoRm30JvHnXXU8BMLbfBXCUk8sLgJ
+        /BLxIf7yrrOOGn5iYS/wVwlRxfFLuYYaflRpH86flvpnvdR/Gy14j2PqWkANP6q0D99HRaKuBdTwo0r7
+        oOSBuhZQY3lyKbxWfv8Yl2nz+nwxKr9wjKeXP4u1cvbtSVnlx4L3OMaPdy2lXAAMtH12iCCTswAAAABJ
+        RU5ErkJggg==
 </value>
   </data>
   <metadata name="menuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
