--- a/vacations/vacations/TitileFrm.resx
+++ b/vacations/vacations/TitileFrm.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <metadata name="toolStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>276, 17</value>
+    <value>17, 17</value>
   </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="toolStripButton2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -137,89 +137,89 @@
   <data name="toolStripButton1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAbWSURBVGhD7Zl7TFNXHMer02Vx2R+byaZzCkrmkNGL0Fac
-        PEovhd5y+wSqxjG3adREnbjhQHysGBEVZTqCmxOlxSkzauKEFh/zjctmlszNaIabYuami3EJ8nBQkP52
-        z/VcvL0cQEoVl/hNPsnNOb9z+vmV+2qQPc3T/E9ipaiXTQr5cpMy/DirDL3FKCmPSUkBj0oej8uezJgU
-        1EecaGunsAQ2kqo1KKjNRlXEVLU66Dm87InIIEOUfAdJulsmUldNqnAlXj+w4U6ZD4mSvcBEUo2skgrH
-        2wxMUlRhI0zK0GaS4MPARob/ZLPZnsHbPf5w334BSUzKyjQlXCpSw+ppqi5zRoXcjLcLTOzpyS8tTWfs
-        Oam687k2bWOujQHEsjS9Hpfwsctkg1MmUtelQmIEcdibxPPPDhqmx0T41kVR1XjL/mdpGpOcm5p8W5AW
-        k2Nl6nLTmdl2g2EYquU+PNJHRIRUXMzhZbE+tdyttoOVy1/kBfqTnDRdQpaZ9pDkfbAwf2Sn6+UmpTxT
-        LILoSVygrULrswZhjKIMWMO/ZGUkPZ+bxtwgCpPgmrCoInaKJVKjI3jB+rIEuFgY3UX8l3WToMGpgfav
-        uzbAPUPWYBX/wp3zi4miPTBLG3NFLCE0cL5ABVsyQro0sGn6WLi0IZrcgJLai1X8S3a67ixJEpH/DgNV
-        eSzc3G2EYwUpneOZKXSTWEJooDdIDXBP6B+xin/hhO4IYojlUxnYkZkCFz5n4Z7bCHDoAacKWb5mUWpS
-        u1jCGk15ScJSiA0oqStYxb8I4sXzGPhuYwo0H/CVloJquYveK5ZgVVQHSVgK8RSKoP7GKv5FaIAkS0Ko
-        F0sYVKFtLbu1RGkx9WW0zzpEipJqwir+ZW9W7AmhgTv7GLhQHNNFGo2hOXSMakvnT/lN/LqMjnPNcvBw
-        t0mSOAI1uFA/3ufU42g1KqjZWMW/eMqDm9AFKogWo7uISB6BxoTGUK2nIrjRqIiIQX9+oYH4N0JgHj0B
-        2ncmcsK+jXjKaZgZFwrqsaPbOuUVYX9xT+JorOF/OirGr4FDhi7SPcGtyUdr2ckRoziZ74UG6AkhUF8U
-        Cw2bY6GpJJ5DDXc2xcGtwhhA8w8akJ9FL4O8QCDiqTS0kURJoFq8jA/6gaJTzzsin1QEQRPWwPb5GXwT
-        YgpmzoXgsLVATS7w6uPmVM5VKIbi5YEJd7v8mSRL4l614TxeJlOnHg6Nt7rr1FY3vKEshldDPoEETdFt
-        aQPR0evr0VzopBJAtfGWqto448GxeJv+x3vEFO2pNHpJwmI8B7kaF6tAa9QWV8ZbrOseEkIoEnfxDQSF
-        5Xmvr45rFeQv25nmMaH5/JwqqYKv5TFUtsVbXKm8QCDirTbYSdJivG7jSlSrSXNNUbPujk4ZHheMkxfy
-        ouOiPvW4s9Nu71k081bwm2vb0FgItUFUi2FdHRqbi/9CAhJvNZsObl1XeRcDXpfl/rdltw+ZYj3Q3EWG
-        YzKzD157fRWMGr8SQk0LQLVkBsQVmUFTmgL0dhYSS6YDnf8BaBZuhoS0Kn5NvOVAg0wGg/m9AxHYKgMo
-        ewGgIvg+6Jgbw9OyBLOrQCouJnbORlAXWyHRqeuZLVNBM78Yr6vKw9v7F9OZ1rDRK46eG/aus722ZEwH
-        34QINIbmRi/79gf6vWM3pdI8qS7QrMwly/YAvSIXNNaqa1ilb7Gcaxhuqrnr0J9s6HjlYzcMmlYK89eu
-        8JFHoDE0NyKnGkxn/gX91jpImHHUpwF/5AXU2VkdWOnhYz7bPJGtabpmrmkBhLKslpccmuGA7MIl8OcX
-        I3nQMRpDcyrHZb4WYXTXAz3vNC+fsOAzohhCGlINgnYkW7Ba77Gebh5pPtlyQ5ARCMo7wYuSCF510qcW
-        YTraCPSsY/z5TJJCSEOqQWjKdHW2vbZnsWIPARjEffhZqQzPmRaILL0IwxcfgCFvO3iGZ34DUdsu8XOk
-        Nfo9lUQhAWlINQK0g7Fhy+5jqWnVk0T8Rbd/NVFGQBpSjYDGqduFNbuPqaZlJ0nEX7S73/eR6GvEaxOd
-        2lqs2X3Mp+7WkkT8RVtu8ZHoa8RrEx263n/cmI/fbSSJ+EsgG1Bv03BP5V5CkugPSQE8hWin7les2X1I
-        Ev2B2Z/vIyFFGlJNJ47kr7Dm44vWqZtKlMFIQ6oRoJ1J6XjbxxfFl4qh3MX3O0kIIQ2pBqF26q4+3IPs
-        EURbpkslSSGkIdXwlOsC+7+Cvob7K2wgij0MDt06vM3AxW63D6adyYVEwR5JXo/W4m0GPuitsqdrohNU
-        M9CnTXdBFzZ6MUPvNujezsk2IdDx/bGkdFSDy5/maR5dZLL/AN0pBHvQg5s2AAAAAElFTkSuQmCC
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAbWSURBVGhD7Zl7bFNVHMcLgjEY/1AS5eEYuABjoXdsbTdk
+        j653fdyt764FghMVAkRQmYKD8rAQxsDBBJehyGAtCJPwEGXteIi8hlFiIkogDoURUTAE42Abe8H6857L
+        ueP27qwbXWGY7Jt8kptzfuf08+vuq5mkN735n8RKUc+bZNLFJvnYb/Xy6OsaOdVsklPAoZCm4rLHMyYZ
+        9R4r2tQmLEIfR1UZZNR6oyJ2olIZ+RRe9likjyFeuoUk3SHjqEsmxVg5Xt+zYU+Zd4mSnaCJo2r1cmos
+        3qZnkqmIGWSSj6wnCXYFfdzYnxwOxxN4u0cf9tvPJ4mJWZolh/OFSlgxSdFuziiTmvF24YnLrn1uoZ1x
+        LbDpzjgd6lqngwHEoqyMDFzCxSWR9M0cR10RCwnhxWGXhuOfLTRMTooNrIunKvCW3c/CLEbrtGlv8NJC
+        FliZaqedme4yGAagWvbD4wJEBIjFhRxclBxQy95qW/VS6bOcQHeyIEuXlmNQNpPkA7Awf+TaM6QmuXSu
+        UAQRTJynpUwdsAZhjKcMWCO0zMvWPO3MYq4ShUmwTVgUsduEErbEWE6wpjQNzhUkthP/ZXUC3PKo4M4X
+        7RtgnyErsUpoYc/5HKJoEKapky4KJfgGzuQrYEN2VLsG1k0eAefXJJIbkFO7sEpoybXrTpEkEXmvMlC+
+        TA/XdhjhSH5m2/jcTLpOKME30BmkBtgn9I9YJbSwQjd5McTiiQxsmZsJZz/Rw12fEeDAfY4X6LmaOTbN
+        HaGENZHyk4TFEBuQUxexSmjhxYtmMfDd2kyo3xcoLQbVshe9XyjBKKhWkrAY4ikUS/2NVUIL3wBJlgRf
+        L5QwKEa2NO5QE6WF1JTSAesQmXKqDquEll3zko/yDdzczcDZoqR20mgMzaFjVFsye8JvwtdldOw0S6GZ
+        vU2SxBGowTczogJOPZYmo4yajlVCS4M7sg5doLxoEbqLCOQRaIxvDNU2lEXUGmWxSejPzzeQOjoKZtFj
+        4M62dFY4sJHmrTRMTYkG5bAhLW3yspi/2CdxItYIPa1lo1bCAUM76WCwa/LQWv342KGszPd8A/SYKKgp
+        TIZb65OhrjiVRQk316XA9YIkQPP3G5CeQi+DnEA40rDf0EISJYFq8TIu6AeKTjnrkDShECLHrITNs7O5
+        JoTkT50Jw2NWATV+hT8jZcb+mTJZf7w8PGFvlz+TZEncrTCcwcskStvB6FSrr1pp9cFoeREMifoA0lSF
+        N8QNJCauqkFz0QnFgGpTLeVVKcavR+Btuh//IVNiwz6jnyQspOFLtsarl6E1Sos3O4Hx3kVCCFn6dq6B
+        yBiX/8qyCU28/AUXUz8sOo+bU2jKuFoOw/6WVIvXxgmEI/4Kg4skLcTvMy5Ftaos7wQl42ttk+HwwkvS
+        gntNxH/U7Mu13dj5ztTrEdF5LWgsilojqMUw3laVw8t9IWGJv0JvB5+uvbyXAb/Xcu/bcrn6vWzdW99O
+        hmU8sxteHLkcho5aCtGmOaCYPwVSCs2gKskEerMe0osnA533NqjeWg9pWeXcmlTL3lsSCfTl9g5HYKME
+        oPQZgLLh90DH7BielqSZvflicSHJM9aCssgK6R5dcDZMBNXsIryufBnePrSYTjbFRCw5fHrAa+4754uH
+        tXJNCEBjaC5i0Tc/0K8fuSaW5rB5QbXUSZYNAr3ECSpr+WWs8mCxnL410FR526099m/rC+/7oM+kEpi9
+        akmAPAKNoblBCyrAdLIBMjZWQ9qUwwENhCLPo5yX04qVuh7zqfpx+sq6y+bKRkDIS6s4yf7ZbsgtmA9/
+        fjqYAx2jMTSncF/gahFGXw3Qs05w8mlzPiaKIcQh1SBot9aC1TqP9UT9YPOxxqu8DE/ksqOcKInhy48F
+        1CJMh2uBnnaEO59JUghxSDUIVamu2rHL8SRWDBKAPuyHnxLLcJxshLiSczAwZx/0e8XNMXDuVxC/6Tw3
+        R1qTsXM/UYhHHFIND+1mHNiy41gqmzJIIqGi27OCKMMjDqmGR+XRbceaHcdU2biNJBIq6h1vBEg8aIRr
+        0z3qKqzZcczHb1eRREJFvdUSIPGgEa5Nd+s6/3FjPny7liQSKuFsQLlJyT6VOwlJojtowngK0R7dr1iz
+        45AkugOzJy9AQow4pJo23NrPseaji9qjm0iUwYhDquGhPRo73vbRRfaZrD978f1OEkKIQ6pBKD26S117
+        kD2EqEt1NpIUQhxSDcdWXXj/V/CgYf8Ka4hiXcGtW4236bm4XK6+tEdbQBQMivZDtBZv0/NBb5XBrok2
+        UE1PnzYdBV3Y6MUMvdugezsrW4dAx/fGNHZUg8t705uHF4nkP2wyA97DlYaYAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="toolStripButton6.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAWXSURBVGhD7ZlbbBtFFIaDQCDBA0jcxAvyhZrLC6pQhUof
-        oFRqaJNWIGo7qgoSFyl9QDy2L6CCEI1QBSotKGkhtpO0XsdO0txdmiZOc3MS7DiJXGczTugNqHiilFKg
-        7e5hzu7Ytdfjm0jWqZRf+uXJzpkz39nZWY+VslWtalVLJ6h84n7ZbtwpWQ2tks00J1lN18Bugts2v8JC
-        V55kq8Em2QyX0oHTLVmNARa+siTZTft5wDzTVZmX7MYv5Crj42x4aSXbTB/xQPNZshuuyjbjmyxNaSTv
-        MK+nIDd5gIWYrtwt2WYoZ+n0F4UY1EIVa7rhL4L1uXtZSv0EVvMLPCCuq58FqHkRQNisfmr6ZbvZztLq
-        J8lm/FQLkuZUaP+2dB9Yr4k3ulha/UQnznx8ckFrnbYShhBLq5+UZ7dYaK3ZStAXwQWWVj/RN8h1pQAe
-        WDFWCjBdZ2n1k7r0S1MAmqXVT3d0AbJ7TYX0gfnvpSoAc8mCZQtLv/ySBMslcFsAPlmXBlP7zhqoo069
-        lmpuP+aguaTjloss/fJLKUCgBaSCUCNc3bvZC8jaT3PpWgAuNxYhdVfIGTBFWurdKiG87La8xtLrJ6mn
-        QuRBFWPMwdLpL8lf8T0PqhhL/sqjLJ3+knsrN/OgijHmYOlKI6lnW4AHVojp2CGWpnSCk5XP0Efpdx5g
-        LuMY2b/9aZamtJJPbt8IPZVXeKA8K/B0DBueoX2BwD1Oz/xXTg/5Etvs8vIKVwLaN3CB03xiA+S68w3e
-        xSedAhmm8IB2CGTCJRAz615eQV0ZgOtRAN/zAJ0bAXq3qsY2XsM+GsPC0+Q8ce4hh4fsc7rJnwje1CYq
-        VgrBawL5+Ih38UEWvjxSCijAGNvYOP3Ad83xp+ijUkXBnfUeci1x19sGojByYRJGqVv7o2oR1BiDsQ5B
-        tONYzKFMvFTiwfKMsRToRgIM7Wom4Dt1FgJiGMZ/nUhzQAyB91RMiUkdQ1fmpjLx/9E0IWsj4sIh6vhs
-        dOqvxdGjcPnkh/CH71W44XhMMbbxGvZhDMbSR+JfhPBS6J7JGRhe/DEDXOuhn0JKLI5hBVxlGMVrSlxc
-        NzUXH6IwkM01307AZwfHuX3HWtW7eKYAcK1xDI6td4vF/xQlhNwXEeO14RiReGAJI/zLb/Qo5hXh64or
-        EP3RzEdG6/7zA3Bo4nDy79PRKXUFPKS4L8KQKD5CJx/UwvB84MjtAmq+ySyg4we1gN7QdBqs1gi/s+Vt
-        2OQqh69ZEX46BsfihmZo+TURiz0cicXntCDZHJwmyQKwre3vG1lQINoGo0lYvMsIzIPHz0RfW4C9mZrJ
-        boaXWwBwVyRGerUQuewfiiUL8J+JZfSPRdQCjneIChTe3VTQbPDoY+3q90ODm6xliLkVEckuLUA+C50z
-        yQKErpmM/inqpha2keOhDOBs8IM0FsfUe8TfCjpmeAHujsQWFrQA+VzbFE4WgG1eTNdptYDOsVkFbgCL
-        aH1LAUfbfbug71x/Eh6NsTiG+jBDzK2wuLCJN3k+p76FsM2LGQ6rG7mRHhmCP0+mFcGDx5jE8cIhxF9i
-        iLlFX5kHeZPn897PR5IF7N0/wo1Be9rVVcA3SwI0sQdS4dH4xlLuvkBmcV8yxNyik4xpJy3E1XsCyQKq
-        9wxyY9ADQbYKLfMwej77lxqejZpa55VYV3PcxvDyi27gy7yJ89lW3ZcswL67jxuTsK9bXQU8uPHg0clD
-        HT1qF3z3UeHYwj+8SfO5vMqfLADbvJiEx2fi0OhVi+gKqhs61V2JjUvPPg1CzMLQVpbq3WSH0yNKCNod
-        nIHgL3TTUmNBeI2ee27Rz9L+UzCfHB7x/UQRLX1nFSt3Hq8J5D0WtrLlEsQtTrd4RQVXHxtawOus+84Q
-        /i52eOY76K+1dmyzyxyVlf0HY9v5j2z2M2sAAAAASUVORK5CYII=
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAWmSURBVGhD7ZltTFtVGMcxGk30gya+xQ9utLj68sUsZjFz
+        H3QuGZvAojLaZZkmviTsg/Hj9kUzjXHELJq5aWDI2kIZt7yOl0HZGJTxVkCgwNpye1rcm7r4yTnn1Au9
+        j+e597Rrb0/fIhSW8E/+6eWc5zzn95xzz+1tyFnTmta0dILCpx6UTbq9oZLc5gWjfk56W38LTHq447zX
+        WOjqk1ySa5SM66/FAsc6VKJzsvDVpZBJf5gHzPNCsd4fMum+kvfonmTDV1ayUf8JDzSVJdPTN2Wjrpil
+        WRnJu/M2S6b1CzzAdCyZ9IuyMTefpcu+KES/FipTS8XrrkLJC/ezlNkTlOS9xAPiuvR5gLKXAYTt6qem
+        XzblmVja7Clk1H2uBYlxNLSjKNZHNmvidVaWNnuiE8ffPsmgtY7ZidwJljZ7Uu7dTKG1ZjtBn0hXWNrs
+        iT5BbisF8MAysVKA/jZLmz2pW780BaBZ2uzpri5ArttQIH2U9/dSFYC5ZMGwk6VffkmC4RrUGQA+2xQD
+        U/7eBqigjm6LNrcfc9BcUo3hKku//FIKEGgB0SDUCFfxfuICEvbTXFktALcbi5DaCuQ4mAwtdeWHEF6u
+        M+xg6bOnhY4CkQeViTEHS5d9hRwFVTyoTBxyFFaydNmX3FW4nQeViTEHS7cyCnUWOXlg6Xixs2iApVk5
+        QXfhc5Jjx+88wGTGMbJj17MszcpK7t61FdoLb/BAeVbg6Rg2PE6HnM77LHb/NxY7+RqvWfPyCncCWrdw
+        gWN8egskW/nqhvl1FoEMUnhAmwUyZhVIHuteXkFFDoD1cYDGFwHatwJ0vaEar7EN+2gMC4+R5fSlR8x2
+        cshiI38iuK1FVKwUgm0C+fREw/zDLHx5pBSQhjG2pmb6oR/qA8/QW2UPBbdU2smt8Kq39Hlg6Mo4DFM3
+        93rUIqgxBmPNgmjCsZhDmXipxIPlGWMpkBQGQ1vrCTSe84JTnITRX8di7BQnoOGcT4mJHkN3ZkGZ+P9o
+        mpCNbjF4jDow65n6a364Eq53fwx/NL4OkvkJxXiNbdiHMRhbVUv+RYgGCt05PgOD8z/GgWs98NOEEotj
+        lALqyE2GkbmmxPlNU3OBAQoDiVz2/Rh8cXSU21fbrK7ihTTAtcYxOPbkKTHzn6KEkAfcYqB8/OJciAcW
+        NsK/+lanYl4RjR0BBaLXE3/LaN17uQ+OjR2P/H3eM6XugJ1k9kU4IYqP0cn7tTA8Hzlxp4Cy7+ILaDur
+        FtA1MR0DqzXC7216F7ZZ8+FbVoSDjsGxeKAZWmqN+XyPur2BOS1IIrumSaQAvNb29wwFFYiWfk8EFlcZ
+        gXnw+Bnua3GyJ1M92c/wkgsA7nH7SJcWIpkdA75IAY4Lvrj+EbdawKk2UYHC1Y0GTQSPrm1Vvx+q68hG
+        hphcbpHs0wKkstA+EylA6JiJ65+itjWxgxyYiANOBN9PY3FMld33W1qvGQ0A97p9waAWIJXLbZORAvCa
+        F9NxXi2gfWRWgevDIprfUcDRpsZ90HOpNwKPxlgcQ32cISbXpBjcxps8laOfQnjNixmcVA9yDX1lcP08
+        HlMEDx5jwq8XZiHwCkNMLvrIPMqbPJUPfjkUKeDg4SFuDNrequ4CPlnCoOEzEA2PxieWsvoCmcVzyRCT
+        i04yop00HZcecEYKKD3Qz41B97nYLjT5Yfhy4i81fDeyNfuVWGt9wMjwUsst+q/zJk5lY2lPpADT/h5u
+        TNiNZ9RdwBc3Hjw68lJHX7XTXn3U+MXgP7xJUzl/jyNSAF7zYsIenQlATYNaRIdLPdDR7ggfXPruUy34
+        DAxtdelkHdltsXtDCHrGNQOuX+ihpcaCsK3S5l2knyv7T8FUMtvFD8NFNPV4FSsrj20C+YCFrW5ZBXGn
+        xea9oYKrt43FLr7Juu8O4e9is93fRn+tteI1a+YoJ+c/YFP4yx31IkEAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="toolStripButton4.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAPTSURBVGhD7ZhdSFNhGMetoKDLPgi6b3YnEl1EN04jrU2p
-        zWVlN0Z1084oCdpmsKwIqxvxoklESB96UVZU065KJCJKVAixKCgV6YPQ0jQhz96eZ3vOOHv3zH3ozhbs
-        Dz88nvd5/8//2Xt2EAvyyiuvpZPVal1tNpsPlpaWdgLDJSUlv+Gn0CgrKyuh0twTBN8HIcf0gWWg5jmV
-        55Yg3EU5bDzgVN7DIJfgegNtz64gzBk5ZJJMwTB2ssmO4JneBkH+SsGSBgaYB8rJznhBiB45VKrACY46
-        HI6VZGmcoPEWLhBHnWOHaDtTLj7dsoR+yutwkjVka5xggEY5iB4t9OfbFiG6K6PoaKyIqgWvNrI1TtA4
-        5vHRf9JyaBnpJPrI1jjhs6sPzX3SidBOAr7II2RrnKDxLDbngqUCeqAX2RonasyGSgXNh2yN0389QLB9
-        k6W+dtufpRoAvYIdpl1kn3mpHaYxtb1QtJwqjwrjr9skWgH9PT3cOnqgl3rHNEr2mRcOIDpMUUEQDNd6
-        OP4AcdfBy9AB8LhDp/DEEowJkyJq124VwwfbTRVkb5zUgOUdFyoV0IPsjJfabbnOhUoFtdt6jeyMV7DL
-        upMLlQroQXbZkRqofM4FSwbY20s22ZN4at0Mj9IkF3AhcE+wu6qQbLKr4NMqswhYf3JBOULhYQ9tzw3h
-        SYiH29nAUTzYLnLmk5clWguEaFsvxN0iIR6ZhejaHQav8R6uQQ2V555CAyQBleeeuLAcVJ4bsiuni+0u
-        b4tN8X4Y6g+Mi8+Pheg7G37eb24Mg9d4D9aG3gTGsRb34F6yMV57Xe6t1S5vLyA06puaXwidvvn94mtz
-        M/0WFtbo9wC96EW2mVeFoqyqVjx+m9OtSkGEzemdnZz+/QODYvi3RUUhtCF+TU9PYE3sPvACT/SmNpnR
-        gXrfOpvL2yMH0ONvv9eDYb/fuBEZAIdBXYU1bo8GPFov97s8mfmf6Z7j7rXQZFhuKlNzomFkHjU5GRkA
-        r+GOimvcHonh6pO+NdR2ybSs2uXuYpqxPHvV93qmvz8ywMzAQOgeV8vi9AawZ7j1Esju8hxiG8XhWEPT
-        64nOzsgAE/fvh+5xtXFRGmqp/eLkcDhW2F3uj2yTOOCXcrDx3E9tgMHzF35xX/qFwFetz+dbTjHSF3z6
-        ZVyDRFw+dvyrNsCVo8oXriYRNsWz+D/47Iq3mTNPRI3TMzVQXCwQvOZqEoG9KUb6wlcbZ54Mt+wHZ2/a
-        9se891PgBcVIX/DeT+v4kSPO018Qbi0ZsDfFSF9gNCcbG8gcxcgrr7xYFRT8A3GuvRUSt2frAAAAAElF
-        TkSuQmCC
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAPiSURBVGhD7ZhdSFNhGMetoKDLPgi6d3YnEgURotNIa1PL
+        uTTrpohA7Jw+KHInYUURVjfSRZOIkgq9KO2Lua5KJIpCNOrCoqAvog9CK81yub09z/YcOXt91j5yZwv2
+        hx87nvd5/8//OefsMMzJKqusZk52u32+1WqtLykp6QKGCgsLx+BT6JSWlhZTaeYJgm+CkO+MgWWg5i6V
+        Z5Yg3HE5bDSKioqewyAn4HgJbU+vIEyzHDJOvhcXFzvIJj2CZ3oVBPktBYsb+I5MwhBlZGe+IESvHCpR
+        4A6+dTqdc8nSPEHj5Vwgjm3ONaK9uUy8umQLfcrrcCdrydY8wQBH5CBG9NCvL9uE8FVE0HmkPKIWvNrJ
+        1jxB42mPj/FKy6FlpDvRT7bmCZ9dY2juSsdCvxPwan1DtuYJGo9jcy5YIqAHepGteaLGbKhE0H3I1jz9
+        1wMEO3Jtu+tW/pypAdAr2GlZR/apl7/T8i7QkSdO7y+LCOPZlivaAOM5I9w6eqCX/6LlLdmnXjiA6LRE
+        BEEwXNv26ANEXQcvUwfA241D+G/YgtPCJIi/pyyA4YMdlnKyN0+/b9mecaESAT3IznwFfLZzXKhECPjs
+        Z8nOfAV77Gu5UImAHmSXHgW8FXe5YPEw6a3oI5v0Sdy2L/P7yke4gH8D9wR9lXlkk14Fb1daxU37Vy4o
+        Ryg87KHtmSG8E+L6ajZwBNdWi4y58rJEW44Q7YuFuJIvxE2rED3rw+AxnsM1qKHyzFNogDig8swTF5aD
+        yjNDDuVggUPVTm9UtBdPBrzvxetbQvQfDj/vF5eGwWM8B2tPHnrfYy3uwb1kY742qk0ralStDxA6+1pa
+        7wmDPnk84mNrK/0VFtYY9wB96EW2qVe5osyrUVyeqoYDASmIqGrQxr+Mjn3BoBj+aX5+CH2Ib6Ojw1gz
+        fR94gSd6U5vUaPM+96JqVeuVAxjxdFztxbCfz5+fGgCHQZ2BNW6PTrWi3a9TXan5n+mGxqaF0GRIbipT
+        u+fQm4mJicnJkZGpAfAYzgVwjdsjMVSz172A2s6YZtWoTT1MM5Y7D/of/RgYmBrgx+Bg6BxXy7JL82LP
+        cOsZkEN1bWUbRWGn1vJouKtraoDh7u7QOa42KsqhLdT+3+R0Ouc41KaXbJMo4Jfysdv9VR/g8dFj37gv
+        /d/AV63b7Z5NMZIXXP1SrkEsTu5s+KgPcGqH8oGriUW14vr3H3wORWvlzGNR2+j6PlhQIBA85mpigb0p
+        RvLCVxtnHg/tG+rHL1TVTXvvJ8A9ipG8qlQtqduP7Nh18APCrcUD9qYYyQuMfsnGJvKLYmSVVVascnL+
+        ANzVvDYs6PRTAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="toolStripButton3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -238,7 +238,7 @@
         RU5ErkJggg==
 </value>
   </data>
-  <metadata name="menuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>400, 17</value>
+  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>27</value>
   </metadata>
 </root>
